test_regress/t/t_enum_bad_value.out
%Error: t/t_enum_bad_value.v:10:19: Enum value exceeds width of enum type (IEEE 1800-2017 6.19)
                                  : ... note: In instance 't'
   10 |       VALUE_BAD = 8
      |                   ^
%Error: Exiting due to
