test_regress/t/t_enum_bad_value.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2023 by Wilson Snyder.
// SPDX-License-Identifier: CC0-1.0

module t();

   typedef enum [2:0] {
      VALUE_BAD = 8
   } enum_t;

endmodule
